Use non-deprecated new instance method